Changelog
=========

10.6-dev - (unreleased)
-----------------------

10.5 - (2014-09-15)
-------------------
* Bug fix: fixed extension identification for links with arguments
  [pasoviul refs #19537]
* Bug fix: fixed PDF/print line-height altered by sup/sub tags
  [demarant refs #20996]
* Bug fix: fixed design issues regarding box sizes within portal-column-two
  [ichimdav refs #20873]
* Feature: Avoid multiple clicks within document actions (download as PDF, etc.)
  [voineali refs #20842]
* Feature: added custom 404 message for PDF download
  [ghicaale refs #20972]

10.4 - (2014-08-27)
-------------------
* Upgrade step: within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.design
  [ichimdav refs #20302]
* Feature: added jquery-rememberstate and eea-rememberstate jquery plugins
  which saves the edit form data on submit and prompts the user to restore
  the data in case of a failure
  [ichimdav refs #20302]

10.3 - (2014-08-27)
-------------------
* Change: moved button style position to inside for region-content ul and
  removed border from tinymce image classes
  [ichimdav]

10.2 - (2014-08-12)
-------------------
* Change: subfolder folder_contents now display content excluded from navigation
  [ichimdav refs #20124]
* Change: fullscreen button help text now spans over entire button
  [ichimdav refs #20461]
* Change: added styling for noPageBreak on TinyMCE body
  [ichimdav 20461]
* Pre-upgrade step: The upgrade step for eea.design should be the first thing
  that needs to be done as soon as the instances are restarted to avoid
  having missing or broken styles.
  Use www8 instance to run upgrade from www/portal_setup/manage_upgrades
  [ichimdav refs #17336]
* Change: Add space after ul within #content-core
  [voineali refs #20457]
* Change: reorganized resources within skins folders
  [ichimdav refs #17336]
* Bug fix: fixed checkpermission import under folder_listing.pt
  [ghicaale]